Fixed monospace text in README.

--- a/README.org
+++ b/README.org
@@ -6,7 +6,7 @@ The goal is to add automation to the [[http://clubs.njit.edu/ieee/][IEEE club sp
 * Installation
 1. Install the dependencies listed.
 2. Clone repository into your home directory.
-3. Run `./setup` and follow the interactive prompts.
+3. Run ~./setup~ and follow the interactive prompts.
 
 ** Dependencies
 - Python v2.x
@@ -14,6 +14,6 @@ The goal is to add automation to the [[http://clubs.njit.edu/ieee/][IEEE club sp
 
 * Issues/ToDo
 - We need to add scheduling functionality to the web interface.
-- We need to create the `./setup` installation script.
+- We need to create the ~./setup~ installation script.
 - When the WebIOPi server is started in standalone mode, the relays turn on and off for a second. This needs to be fixed soon.
 - When the web interface is loaded for the first time after starting the WebIOPi server, the relays all turn on at the same time. This needs to be fixed soon.
